--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="MSSmartTagsPreventParsing" content="true">
   <meta http-equiv="imagetoolbar" content="no">
 
-  <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
   <link href="lib/twt/twt.min.css" rel="stylesheet">
   <link href="css/application.min.css" rel="stylesheet">
