--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>phocks's Twitter archive</title>
+  <title>Your Twitter archive - phocks</title>
   <meta name="description" content="All of the Tweets.">
 
   <meta http-equiv="MSThemeCompatible" Content="No">
